Fixed overflow problem in application.css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,8 @@
 *{
 	 -webkit-font-smoothing: antialiased;
   font-family: 'Montserrat', Helvetica, sans-serif;
-  overflow:auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body {
